--- a/update_version/templates/index.html
+++ b/update_version/templates/index.html
@@ -7,19 +7,24 @@
     <script
 			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-        crossorigin="anonymous"></script>
-
+			  crossorigin="anonymous"></script>
+    
+        
 </head>
 <body>
-    
+
+  
 </body>
 
 <script>
-    $.getJSON('/static/test.json', function (data) {
-    console.log(data)
-    
-  });
 
+function updateDropdown() {
+ 
+  $.getJSON('/static/data.json', function (data) {
+    console.log(data)
+  });
+}
+updateDropdown()
 
 </script>
 </html>
