--- a/dual_stream/templates/index.html
+++ b/dual_stream/templates/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="/static/js/broadway/YUVCanvas.js"></script>
   <script type="text/javascript" src="/static/js/broadway/Decoder.js"></script>
   <script type="text/javascript" src="/static/js/broadway/Player.js"></script>
-  <script type="text/javascript" src="/static/js/ws_client1.js"></script>
+  <script type="text/javascript" src="/static/js/ws_client.js"></script>
   <script
 			  src="https://code.jquery.com/jquery-3.4.1.min.js"
 			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -16,9 +16,14 @@
         
 </head>
 <body>
- 
+ <div>
+
   <div id="container"></div>
   <div id="container1"></div>
+
+
+ </div>
+ 
 
 </body>
   
