--- a/update_version/templates/test.html
+++ b/update_version/templates/test.html
@@ -51,11 +51,11 @@
               </div>
             </div>
             <div class="field">
-              <button class="button is-success">
-                Submit
-              </button>
+              
               <button onclick=closeModal()  aria-label="close" class="button">Cancel</button>
 
+              <button class="button is-success"> Submit</button>
+              
             </div>
           </form>
     </div>
