--- a/update_version/templates/test.html
+++ b/update_version/templates/test.html
@@ -21,17 +21,7 @@
         </div>
         <div class="dropdown-menu" id="dropdown-menu2" role="menu">
           <div class="dropdown-content" id="dropdown-content">
-            <div id="open-modal"  class="dropdown-item">
-              <p>One-Wifi <i class="fas fa-lock is-pulled-right"></i> </p>
-            </div>
-            <hr class="dropdown-divider">
-            <div id="open-modal" class="dropdown-item" href="/static">
-                
-              <p>TechGarage-6 <i class="fas fa-lock is-pulled-right"></i> </p>
-            </div>
-            <hr class="dropdown-divider">
-                <a id="open-modal" class="dropdown-item" href="">Open modal <i class="fas fa-lock is-pulled-right"> </i> </a>
-            </a>
+           
           </div>
         </div>
       </div>
@@ -82,17 +72,27 @@ var connections = [
     { SSID: "xfinitywifi", SECURITY: "WPA2", SIGNAL: "20" },
     { SSID: "Phone", SECURITY: "WPA2", SIGNAL: "100" },
     { SSID: "Address", SECURITY: "WPA2", SIGNAL: "30" },
-    { SSID: "Zip", SECURITY: "WPA2", SIGNAL: "40" },
-    { SSID: "Comments", SECURITY: "WPA2", SIGNAL: "50" }
+    { SSID: "Zip", SECURITY: "--", SIGNAL: "40" },
+    { SSID: "Comments", SECURITY: "--", SIGNAL: "50" }
 ];
 for (var i = 0; i < connections.length; i += 1) {
     console.log(connections[i].SSID)
     const div = document.createElement('a');
 
     div.className = 'dropdown-item';
-    div.id = 'open-modal';
-    div.innerHTML = `${ connections[i].SSID}<i class="fas fa-lock is-pulled-right"> </i> `;
-    document.getElementById('dropdown-content').appendChild(div);
+    switch (connections[i].SECURITY) {
+        case 'WPA2':
+        div.id = 'open-modal';
+
+        div.innerHTML = `${ connections[i].SSID}<i class="fas fa-lock is-pulled-right"> </i> `;
+        document.getElementById('dropdown-content').appendChild(div);
+        break;
+        default:
+        div.innerHTML = `${ connections[i].SSID} </i> `;
+        document.getElementById('dropdown-content').appendChild(div);
+
+
+    }
 
 }
 
